--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 title: Ryan Ellison
-logo: /assets/img/Profile.JPG
-# ee_poster: /assets/img/EE_poster.jpeg
-# jbu_snippet: /assets/img/JBU_snippet.png
-twitter: https://twitter.com/vladUngu
-linkedin: https://www.linkedin.com/in/vlad-ungureanu/
-github: https://github.com/vladUng
-description: Vlad Ungureanu's Website
+logo: /assets/img/Picture_Me.JPG
+
+twitter: https://twitter.com/_Ryan_Ellison
+linkedin: https://www.linkedin.com/in/ryan-ellison-b5b7b4159/
+#github: https://github.com/vladUng
+description: Ryan Ellison's Website
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
