adding additional google analytics code

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Ryan Ellison
 logo: /docs/assets/img/Picture_Me.jpg
+google_analytics: G-X7P50197W6
 
 twitter: https://twitter.com/_Ryan_Ellison
 linkedin: https://www.linkedin.com/in/ryan-ellison-b5b7b4159/
