--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,10 @@
 title: Ryan Ellison's Website
 description: Ryan Ellison's Website
 baseurl: "/just-the-docs" # the subpath of your site, e.g. /blog
-url: "https://just-the-docs.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ryanj-ellison.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
+theme: just-the-docs
 remote_theme: just-the-docs
 
 exclude:
