--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Ryan Ellison's Website
 description: Ryan Ellison's Website
-baseurl: "/just-the-docs" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ryanj-ellison.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
